<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="410dp"
        android:layout_height="88dp"
        android:layout_marginBottom="679dp"
        android:text="@string/ba_yapt_n_z_i_in_te_ekk_rler"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="582dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ana_sayfa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView3"
        android:layout_width="305dp"
        android:layout_height="264dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="226dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/money"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>