<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/şopar"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="411dp"
        android:layout_height="411dp"
        android:layout_marginBottom="45dp"
        android:background="#E3E3E3"
        app:layout_constraintBottom_toTopOf="@+id/paratxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/kullaniciisim"
        android:layout_width="217dp"
        android:layout_height="47dp"
        android:layout_marginBottom="679dp"
        android:background="@color/purple_500"
        android:singleLine="false"
        android:text="@string/ho_geldin"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="195dp"
        android:layout_height="47dp"
        android:layout_marginBottom="679dp"
        android:background="@color/purple_500"
        android:text="@string/ho_geld_n"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="369dp"
        android:layout_height="47dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="626dp"
        android:indeterminate="false"
        android:max="100000"
        android:progress="0"
        android:progressTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kullaniciisim"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/paratxt"
        android:layout_width="203dp"
        android:layout_height="44dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="72dp"
        android:background="#BDBDBD"
        android:ems="10"
        android:hint="Bağış Miktarı(₺)"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/button4"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:text="@string/ba_yap"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="393dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="166dp"
        android:text="@string/etk_nl_kler"
        android:textAlignment="center"
        android:textColor="#555555"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="396dp"
        android:layout_height="147dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="88dp"
        android:background="#BDBDBD"
        android:text="@string/corona_d_nemi_etkinli_miz_bulunmamaktad_r"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/paratxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/showpara"
        android:layout_width="190dp"
        android:layout_height="24dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/kullaniciisim"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="6dp"
        android:text="Bağışlar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="2dp"
        android:text="Toplam Bağışlarınız:"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toStartOf="@+id/showpara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kullaniciisim" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="350dp"
        android:layout_marginBottom="4dp"
        android:text="100.000₺"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showpara"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="15dp"
        android:layout_height="18dp"
        android:layout_marginStart="386dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="22dp"
        android:text="V"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/showpara"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/showpara" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView3"
        android:layout_width="284dp"
        android:layout_height="150dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/vir_sgif"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="300dp"
        android:layout_height="23dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="1dp"
        android:text="Anonim Bağış(Tamamen Anonim)"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/kullaniciisim"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/paratxt"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>